codama-macros/tests/codama_attribute/optional_account_strategy_directive/invalid_optional_account_strategy.fail.stderr
error: expected `omitted` or `program_id`
 --> tests/codama_attribute/optional_account_strategy_directive/invalid_optional_account_strategy.fail.rs:5:42
  |
5 |     #[codama(optional_account_strategy = invalid)]
  |                                          ^^^^^^^
