codama-macros/tests/codama_attribute/optional_account_strategy_directive/invalid_optional_account_strategy.fail.rs
use codama_macros::CodamaInstructions;

#[derive(CodamaInstructions)]
pub enum Instructions {
    #[codama(optional_account_strategy = invalid)]
    Create,
}

fn main() {}
